Fix rendering on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -81,7 +81,7 @@
 }
 
 .generateButton {
-  background-color: rgb(253, 253, 253)
+  background-color: rgb(253, 253, 253);
   display: block;
   width: auto;
   height: auto;
@@ -91,6 +91,7 @@
   z-index: 1;
   box-shadow: 5px 8px 10px -10px rgba(0, 0, 0, 0.9);
   transition: transform 0.3s, box-shadow 0.4s ease-in-out 0s;
+  -webkit-appearance: none;
 }
 .generateButton:hover {
   box-shadow: 5px 8px 10px -10px rgba(0, 0, 0, 0.8);
@@ -127,7 +128,6 @@
 }
 
 .toolTipInput {
-  -webkit-appearance: none;
   margin: 0px 5px;
   padding: 0 5px;
   width: auto;
@@ -141,6 +141,7 @@
   border-bottom: 1px solid rgba(233, 233, 233, 0.9);
   text-align: center;
   font-size: 0.8rem;
+  -webkit-appearance: none;
 }
 /* Show the tooltip text when you mouse over the tooltip container */
 .toolTip:hover {
